# long-running-notify

./: .gitignore  Cargo.toml  build.zig
.github/workflows/: release.yml
docs/: README.md
src/: main.rs  main.zig  notifier.rs  send_email.zig
src/notifier/: email.rs  freedesktop.rs
