# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "lrn"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
lettre = "0.10.1"
ulid = "1.0.0"
trust-dns-resolver = "0.22.0"
