# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "lrn"
version = "0.2.0"
edition = "2021"
description = "Long Running Command Notifier"
license = "MIT"
homepage = "https://github.com/BeLeap/long-running-notify"
repository = "https://github.com/BeLeap/long-running-notify"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
lettre = "0.10.1"
ulid = "1.0.0"
trust-dns-resolver = "0.22.0"
dbus = "0.9.7"
